<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="15dp"
    android:background="@color/white">

    <TextView
        android:id="@+id/item_header_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/header"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="20dp"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/item_date_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/publication_date"
        android:layout_margin="15dp"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/item_header_tv" />

    <TextView
        android:id="@+id/item_main_text_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/main_text"
        app:layout_constraintBottom_toTopOf="@id/item_author_tv"
        app:layout_constraintTop_toBottomOf="@id/item_date_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:breakStrategy="high_quality" />

    <TextView
        android:id="@+id/item_author_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/news_author"
        android:textSize="14sp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>